--- a/naunet/templates/cvode/src/naunet_physics.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_physics.cpp.j2
@@ -7,7 +7,7 @@
 // clang-format off
 {% if info.device == "gpu" -%} __device__ __host__ {% endif -%}
 double mantles(double *y) {
-    return {{ physics.mantles | wordwrap(80) | replace("\n", "\n" + 8*" ") }};
+    return {{ physics.mantles | stmwrap(80, 8) }};
 }
 // clang-format on
 
