--- a/naunet/templates/patches/enzo/typedefs.h.j2
+++ b/naunet/templates/patches/enzo/typedefs.h.j2
@@ -11,7 +11,7 @@
 /  PURPOSE:
 /
 ************************************************************************/
-
+// clang-format off
 #include "CloudyCoolingData.h"
 #include "CoolData.h"
 #include "RateData.h"
