--- a/naunet/templates/odeint/src/naunet_physics.cpp.j2
+++ b/naunet/templates/odeint/src/naunet_physics.cpp.j2
@@ -6,7 +6,7 @@
 
 double mantles(double *y) {
     // clang-format off
-    return {{ physics.mantles | wordwrap(80) | replace("\n", "\n" + 8*" ") }};
+    return {{ physics.mantles | stmwrap(80, 8) }};
     // clang-format on
 }
 
