--- a/naunet/templates/patches/enzo/Grid.h.j2
+++ b/naunet/templates/patches/enzo/Grid.h.j2
@@ -9,6 +9,7 @@
 /  PURPOSE:
 /
 ************************************************************************/
+// clang-format off
 #ifndef GRID_DEFINED__
 #define GRID_DEFINED__
 #include <vector>
@@ -1826,7 +1827,7 @@ int TransferSubgridActiveParticles(grid* Subgrids[], int NumberOfSubgrids,
                             int &DINum, int &DIINum, int &HDINum);
 
   /* Identify Multi-species fields from KROME. */
-  int IdentifyNaunetSpeciesFields({{ arguments | wordwrap(40) | replace("\n", "\n" + " "*34) }});
+  int IdentifyNaunetSpeciesFields({{ arguments | stmwrap(80, 32) }});
 
   /* Identify shock fields. */
   int IdentifyShockSpeciesFields(int &MachNum,int &PSTempNum, int &PSDenNum);
