--- a/naunet/templates/patches/enzo/hydro_rk/Grid_TurbulenceInitializeGrid.C.j2
+++ b/naunet/templates/patches/enzo/hydro_rk/Grid_TurbulenceInitializeGrid.C.j2
@@ -8,7 +8,7 @@
 /
 /
 ************************************************************************/
-
+// clang-format off
 #include <stdio.h>
 #include <stdlib.h>
 #include <math.h>
@@ -48,7 +48,7 @@ int grid::TurbulenceInitializeGrid(float CloudDensity, float CloudSoundSpeed, FL
     kphHeIINum, kdissH2INum, RPresNum1, RPresNum2, RPresNum3;
   int ColourNum;
 #ifdef USE_NAUNET
-  int {{ declare | wordwrap(80) | replace("\n", "\n      ") }};
+  int {{ declare | stmwrap(80, 6) }};
 #endif
 
   NumberOfBaryonFields = 0;
