--- a/naunet/templates/patches/enzo/hydro_rk/TurbulenceInitialize.C.j2
+++ b/naunet/templates/patches/enzo/hydro_rk/TurbulenceInitialize.C.j2
@@ -8,6 +8,7 @@
 /
 /
 ************************************************************************/
+// clang-format off
 #ifdef USE_MPI
 #include <mpi.h>
 #endif /* USE_MPI */
