--- a/naunet/templates/cvode/include/naunet_physics.h.j2
+++ b/naunet/templates/cvode/include/naunet_physics.h.j2
@@ -2,27 +2,27 @@
 #define __NAUNET_PHYSICS_H__
 
 /* {% if info.device == "gpu" %} */
-__device__ __host__ double mantles(double *y);
-__device__ double shieldingfactor(int specidx, double h2coldens,
-                                  double spcoldens, double tgas, int method);
-__device__ double H2shielding(double coldens, int method);
-__device__ double COshielding(double tgas, double h2col, double coldens,
-                              int method);
-__device__ double N2shielding(double tgas, double h2col, double coldens,
-                              int method);
-__device__ double H2shieldingInt(double coldens);
-__device__ double COshieldingInt(double tgas, double h2col, double coldens);
-__device__ double N2shieldingInt(double tgas, double h2col, double coldens);
+__device__ __host__ double GetMantleDens(double *y);
+__device__ double GetShieldingFactor(int specidx, double h2coldens,
+                                     double spcoldens, double tgas, int method);
+__device__ double GetH2shielding(double coldens, int method);
+__device__ double GetCOshielding(double tgas, double h2col, double coldens,
+                                 int method);
+__device__ double GetN2shielding(double tgas, double h2col, double coldens,
+                                 int method);
+__device__ double GetH2shieldingInt(double coldens);
+__device__ double GetCOshieldingInt(double tgas, double h2col, double coldens);
+__device__ double GetN2shieldingInt(double tgas, double h2col, double coldens);
 /* {% else %} */
-double mantles(double *y);
-double shieldingfactor(int specidx, double h2coldens, double spcoldens,
-                       double tgas, int method);
-double H2shielding(double coldens, int method);
-double COshielding(double tgas, double h2col, double coldens, int method);
-double N2shielding(double tgas, double h2col, double coldens, int method);
-double H2shieldingInt(double coldens);
-double COshieldingInt(double tgas, double h2col, double coldens);
-double N2shieldingInt(double tgas, double h2col, double coldens);
+double GetMantleDens(double *y);
+double GetShieldingFactor(int specidx, double h2coldens, double spcoldens,
+                          double tgas, int method);
+double GetH2shielding(double coldens, int method);
+double GetCOshielding(double tgas, double h2col, double coldens, int method);
+double GetN2shielding(double tgas, double h2col, double coldens, int method);
+double GetH2shieldingInt(double coldens);
+double GetCOshieldingInt(double tgas, double h2col, double coldens);
+double GetN2shieldingInt(double tgas, double h2col, double coldens);
 /* {% endif %} */
 
 #endif
