--- a/naunet/templates/cvode/src/naunet_ode.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_ode.cpp.j2
@@ -27,7 +27,7 @@
 
 // clang-format off
 {% if info.device == "gpu" -%} __device__ {% endif -%}
-int calculate_rates(realtype *k, realtype *y, NaunetData *u_data) {
+int EvalRates(realtype *k, realtype *y, NaunetData *u_data) {
 
     {% for v in variables.varis -%}
         realtype {{ v }} = u_data->{{ v }};
@@ -62,10 +62,10 @@ int calculate_rates(realtype *k, realtype *y, NaunetData *u_data) {
     return NAUNET_SUCCESS;
 }
 
-int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data) {
+int Fex(realtype t, N_Vector u, N_Vector udot, void *user_data) {
     /* {% if info.method == "dense" or info.method == "sparse" -%} */
     realtype *y            = N_VGetArrayPointer(u);
-    realtype *ydot         = N_VGetArrayPointer(u_dot);
+    realtype *ydot         = N_VGetArrayPointer(udot);
     NaunetData *u_data     = (NaunetData *)user_data;
     // clang-format off
     {% for v in variables.varis -%}
@@ -75,7 +75,7 @@ int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data) {
     // clang-format on
 
     realtype k[NREACTIONS] = {0.0};
-    calculate_rates(k, y, u_data);
+    EvalRates(k, y, u_data);
 
     // clang-format off
     {% for eq in ode.fex -%}
@@ -91,7 +91,7 @@ int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data) {
     /* {% elif info.method == "cusparse" -%} */
 
     realtype *y         = N_VGetDeviceArrayPointer_Cuda(u);
-    realtype *ydot      = N_VGetDeviceArrayPointer_Cuda(u_dot);
+    realtype *ydot      = N_VGetDeviceArrayPointer_Cuda(udot);
     NaunetData *h_udata = (NaunetData *)user_data;
     NaunetData *d_udata;
 
@@ -109,7 +109,7 @@ int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data) {
     unsigned block_size = min(BLOCKSIZE, nsystem);
     unsigned grid_size =
         max(1, min(MAXNGROUPS / BLOCKSIZE, nsystem / BLOCKSIZE));
-    f_kernel<<<grid_size, block_size>>>(y, ydot, d_udata, nsystem);
+    FKernel<<<grid_size, block_size>>>(y, ydot, d_udata, nsystem);
 
     cudaDeviceSynchronize();
     cudaError_t cuerr = cudaGetLastError();
@@ -125,7 +125,7 @@ int fex(realtype t, N_Vector u, N_Vector u_dot, void *user_data) {
     return NAUNET_SUCCESS;
 }
 
-int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
+int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
         N_Vector tmp1, N_Vector tmp2, N_Vector tmp3) {
     /* {% if info.method == "dense" -%} */
     realtype *y            = N_VGetArrayPointer(u);
@@ -138,7 +138,7 @@ int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
     // clang-format on
 
     realtype k[NREACTIONS] = {0.0};
-    calculate_rates(k, y, u_data);
+    EvalRates(k, y, u_data);
 
     // clang-format off
     {% for eq in ode.jac -%}
@@ -153,7 +153,7 @@ int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
     NaunetData *u_data     = (NaunetData *)user_data;
 
     realtype k[NREACTIONS] = {0.0};
-    calculate_rates(k, y, u_data);
+    EvalRates(k, y, u_data);
 
     // clang-format off
     // number of non-zero elements in each row
@@ -189,7 +189,7 @@ int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
     unsigned block_size = min(BLOCKSIZE, nsystem);
     unsigned grid_size =
         max(1, min(MAXNGROUPS / BLOCKSIZE, nsystem / BLOCKSIZE));
-    j_kernel<<<grid_size, block_size>>>(y, data, d_udata, nsystem);
+    JKernel<<<grid_size, block_size>>>(y, data, d_udata, nsystem);
 
     cudaDeviceSynchronize();
     cudaError_t cuerr = cudaGetLastError();
@@ -206,7 +206,7 @@ int jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
 }
 
 /* {% if info.method == "cusparse" -%} */
-int jacInit(SUNMatrix jmatrix) {
+int InitJac(SUNMatrix jmatrix) {
     int rowptrs[NSPECIES + 1], colvals[NNZ];
 
     // Zero out the Jacobian
@@ -232,8 +232,8 @@ int jacInit(SUNMatrix jmatrix) {
     return NAUNET_SUCCESS;
 }
 
-__global__ void f_kernel(realtype *y, realtype *ydot, NaunetData *d_udata,
-                         int nsystem) {
+__global__ void FKernel(realtype *y, realtype *ydot, NaunetData *d_udata,
+                        int nsystem) {
     int tidx = blockIdx.x * blockDim.x + threadIdx.x;
     int gs   = blockDim.x * gridDim.x;
 
@@ -249,7 +249,7 @@ __global__ void f_kernel(realtype *y, realtype *ydot, NaunetData *d_udata,
         realtype k[NREACTIONS] = {0.0};
         NaunetData *udata      = &d_udata[cur];
 
-        calculate_rates(k, y_cur, udata);
+        EvalRates(k, y_cur, udata);
 
         // clang-format off
         {% for eq in ode.fex -%}
@@ -263,8 +263,8 @@ __global__ void f_kernel(realtype *y, realtype *ydot, NaunetData *d_udata,
     }
 }
 
-__global__ void j_kernel(realtype *y, realtype *data, NaunetData *d_udata,
-                         int nsystem) {
+__global__ void JKernel(realtype *y, realtype *data, NaunetData *d_udata,
+                        int nsystem) {
     int tidx = blockIdx.x * blockDim.x + threadIdx.x;
     int gs   = blockDim.x * gridDim.x;
 
@@ -275,7 +275,7 @@ __global__ void j_kernel(realtype *y, realtype *data, NaunetData *d_udata,
         realtype k[NREACTIONS] = {0.0};
         NaunetData *udata      = &d_udata[cur];
 
-        calculate_rates(k, y_cur, udata);
+        EvalRates(k, y_cur, udata);
 
         // clang-format off
         {% for data in ode.spjacdata -%}
@@ -286,11 +286,11 @@ __global__ void j_kernel(realtype *y, realtype *data, NaunetData *d_udata,
 }
 
 /* {% else %} */
-int jtv(N_Vector v, N_Vector Jv, realtype t, N_Vector u, N_Vector fu,
+int Jtv(N_Vector v, N_Vector jv, realtype t, N_Vector u, N_Vector fu,
         void *user_data, N_Vector tmp) {
     realtype *x            = N_VGetArrayPointer(u);
     realtype *y            = N_VGetArrayPointer(v);
-    realtype *ydot         = N_VGetArrayPointer(Jv);
+    realtype *ydot         = N_VGetArrayPointer(jv);
     realtype *fx           = N_VGetArrayPointer(fu);
 
     NaunetData *u_data     = (NaunetData *)user_data;
@@ -302,7 +302,7 @@ int jtv(N_Vector v, N_Vector Jv, realtype t, N_Vector u, N_Vector fu,
     // clang-format on
 
     realtype k[NREACTIONS] = {0.0};
-    calculate_rates(k, y, u_data);
+    EvalRates(k, y, u_data);
 
     // clang-format off
     {% for eq in ode.fex -%}
