--- a/naunet/templates/odeint/src/naunet_physics.cpp.j2
+++ b/naunet/templates/odeint/src/naunet_physics.cpp.j2
@@ -4,39 +4,39 @@
 #include "naunet_macros.h"
 #include "{{ physics.header }}"
 
-double mantles(double *y) {
+double GetMantleDens(double *y) {
     // clang-format off
     return {{ physics.mantles | stmwrap(80, 8) }};
     // clang-format on
 }
 
-double shieldingfactor(int specidx, double h2coldens, double spcoldens,
-                       double tgas, int method) {
+double GetShieldingFactor(int specidx, double h2coldens, double spcoldens,
+                          double tgas, int method) {
     double factor;
 #ifdef IDX_H2I
     if (specidx == IDX_H2I) {
-        factor = H2shielding(h2coldens, method);
+        factor = GetH2shielding(h2coldens, method);
     }
 #endif
 #ifdef IDX_COI
     if (specidx == IDX_COI) {
-        factor = COshielding(tgas, h2coldens, spcoldens, method);
+        factor = GetCOshielding(tgas, h2coldens, spcoldens, method);
     }
 #endif
 #ifdef IDX_N2I
     if (specidx == IDX_N2I) {
-        factor = N2shielding(tgas, h2coldens, spcoldens, method);
+        factor = GetN2shielding(tgas, h2coldens, spcoldens, method);
     }
 #endif
 
     return factor;
 }
 
-double H2shielding(double coldens, int method) {
+double GetH2shielding(double coldens, int method) {
     double shielding = -1.0;
     switch (method) {
         case 0:
-            shielding = H2shieldingInt(coldens);
+            shielding = GetH2shieldingInt(coldens);
             break;
         default:
             break;
@@ -44,11 +44,11 @@ double H2shielding(double coldens, int method) {
     return shielding;
 }
 
-double COshielding(double tgas, double h2col, double coldens, int method) {
+double GetCOshielding(double tgas, double h2col, double coldens, int method) {
     double shielding = -1.0;
     switch (method) {
         case 0:
-            shielding = COshieldingInt(tgas, h2col, coldens);
+            shielding = GetCOshieldingInt(tgas, h2col, coldens);
             break;
         default:
             break;
@@ -56,11 +56,11 @@ double COshielding(double tgas, double h2col, double coldens, int method) {
     return shielding;
 }
 
-double N2shielding(double tgas, double h2col, double coldens, int method) {
+double GetN2shielding(double tgas, double h2col, double coldens, int method) {
     double shielding = -1.0;
     switch (method) {
         case 0:
-            shielding = N2shieldingInt(tgas, h2col, coldens);
+            shielding = GetN2shieldingInt(tgas, h2col, coldens);
             break;
         default:
             break;
@@ -69,7 +69,7 @@ double N2shielding(double tgas, double h2col, double coldens, int method) {
 }
 
 // Interpolate/Extropolate from table (must be rendered in naunet constants)
-double H2shieldingInt(double coldens) {
+double GetH2shieldingInt(double coldens) {
     double shielding = -1.0;
 
     /* {% if "Table" in physics.h2shielding -%} */
@@ -103,7 +103,7 @@ double H2shieldingInt(double coldens) {
 }
 
 // Interpolate/Extropolate from table (must be rendered in naunet constants)
-double COshieldingInt(double tgas, double h2col, double coldens) {
+double GetCOshieldingInt(double tgas, double h2col, double coldens) {
     double shielding = -1.0;
 
     /* {% if "Table" in physics.coshielding -%} */
@@ -181,7 +181,7 @@ double COshieldingInt(double tgas, double h2col, double coldens) {
 }
 
 // Interpolate/Extropolate from table (must be rendered in naunet constants)
-double N2shieldingInt(double tgas, double h2col, double coldens) {
+double GetN2shieldingInt(double tgas, double h2col, double coldens) {
     double shielding = -1.0;
 
     /* {% if "Table" in physics.n2shielding -%} */
