--- a/naunet/templates/odeint/include/naunet.h.j2
+++ b/naunet/templates/odeint/include/naunet.h.j2
@@ -33,7 +33,9 @@ class Naunet {
 PYBIND11_MODULE(PYMODNAME, m) {
     py::class_<Naunet>(m, "Naunet")
         .def(py::init())
-        .def("Init", &Naunet::Init)
+        .def("Init", &Naunet::Init, py::arg("nsystem") = 1,
+             py::arg("atol") = 1e-20, py::arg("rtol") = 1e-5)
+        .def("Finalize", &Naunet::Finalize)
         .def("Solve", &Naunet::PyWrapSolve);
 
     // clang-format off
