--- a/naunet/templates/common/src/naunet_physics.cpp.j2
+++ b/naunet/templates/common/src/naunet_physics.cpp.j2
@@ -13,7 +13,8 @@ double GetMantleDens(double *y) {
 
 // clang-format off
 {% if info.device == "gpu" -%} __device__ {% endif -%}
-double GetShieldingFactor(int specidx, double h2coldens, double spcoldens, double tgas, int method) {
+double GetShieldingFactor(int specidx, double h2coldens, double spcoldens,
+                          double tgas, int method) {
     // clang-format on
     double factor;
 #ifdef IDX_H2I
